# platanus-hack-26-ar-team-6

./: .gitignore  JERF_task.md  JORF_task.md  MARIRF_task.md  NARF_task.md  README.md  SARF_task.md  goal.md  implementation.md  jerf.md  jorf.md  marirf.md  opencode.json  plan.md  platanus-hack-project.json  project-description.md  recompile.txt  sarf.md  task.md
apps/server/: Dockerfile  Dockerfile.demo  README.md  pyproject.toml
apps/server/bench/: README.md  analyze_logs.py  server_bench.py
apps/server/scripts/: backfill_memory_chunks.py  smoke_closure.py  smoke_project_context.py
apps/server/src/relevo/: DATABASE.md  __init__.py  __main__.py  admin.py  agent.py  config.py  db.py  main.py  vector_retrieval.py
apps/server/src/relevo/agents/: README.md  __init__.py  on_demand.py
apps/server/src/relevo/agents/prompts/: agent_system.md
apps/server/src/relevo/api/: auth.py  context.py  demo.py  graph.py  health.py  request_context.py  team_pulse.py
apps/server/src/relevo/seeds/: demo_loader.py  loader.py  schemas.py
apps/server/tests/: test_auth_projects.py  test_db_vector_routing.py  test_demo_railwaywise.py  test_memory_routes.py  test_on_demand_agent.py  test_request_context_route.py  test_team_pulse.py  test_vector_retrieval.py
demo/: README.md  setup_desktop.py
eval/: README.md  _stub_retriever.py  _stub_router.py  agent_directory.yaml  retrieval_cases.yaml  router_cases.yaml  run_eval.py  test_run_eval.py
infra/: README.md  docker-compose.yml  railway.demo.json  railway.json
migrations/: 0001_init.sql  0002_v3_project_context.sql  (+4 more)
(+111 files in other folders)
