[project]
name = "relevo-server"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.81",
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "pydantic>=2.9.0",
    "PyYAML>=6.0.2",
    "psycopg[binary,pool]>=3.1",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relevo"]
